# dtk

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GUI/opengl/: dtkGUIOpenGLbyFreeGLUT.cpp  dtkGUIOpenGLbyFreeGLUT.h  dtkGUIOpenGLbyGLAD.cpp  dtkGUIOpenGLbyGLAD.h
clang-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dtk.sln  install_manifest.txt
clang-build/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  dtk.vcxproj  dtk.vcxproj.filters
demo/FEMsimulation/: CMakeLists.txt  README.md  dtkFemSimulation.cpp  dtkFemSimulation.h  dtkGUIOpenGL.cpp  dtkScene.cpp  dtkScene.h  main.cpp
demo/RigidBodySimulation/: CMakeLists.txt  README.md  cbody.cpp  cbody.h  cjoint.cpp  cjoint.h  cpair.cpp  cpair.h  ctypes.cpp  ctypes.h  cworld.cpp  cworld.h  main.cpp
demo/SPHSimulation/: README.md  dtkSPHsolver.cpp  dtkSPHsolver.h
demo/cgalDraw/: CMakeLists.txt  ui_ImageInterface.h
demo/eigentest/: main.cpp
demo/guideWireSimulation/: .editorconfig  CMakeLists.txt  README.md  collisionResponse.cpp  collisionResponse.h  controlCore.cpp  controlCore.h  cutHead.cpp  cutHead.h  glDrawer.cpp  glDrawer.h  glThread.cpp  glThread.h  guideWire.cpp  guideWire.h  guideWireInternalResponse.cpp  guideWireInternalResponse.h  guideWireOpenGLRender.cpp  guideWireOpenGLRender.h  guideWireSimulation.cpp  guideWireSimulation.h  guideWireSimulation.qrc  guideWireSimulation.ui  main.cpp  resource.h  simulationParameters.ui  vascularOpenGLRender.cpp  vascularOpenGLRender.h
demo/guideWireSimulation/bak/: DevicePhantomOmni.cpp  DevicePhantomOmni.h  guideWireSimulation.cpp  guideWireSimulation.h
demo/guideWireSimulation/data/: avoidPoint.txt  avoidPoint1.txt  avoidPoint2.txt  gwdata.txt  pipe_1_moderate.s4m  quaternionsCurvatures.txt  triangleID.txt  triangleWirter.s3m  vein final version.s4m  vein final version1.s3m  vein final version1.s4m  vein0806version7.s3m  vein0806version7.s4m  vein0806version8.s3m  vein0806version8.s4m
demo/guideWireSimulation/data/.svn/: entries
demo/guideWireSimulation/data/.svn/text-base/: cholecyst_moderate.s4m.svn-base  gallbladder01.s4m.svn-base  gwdata.txt.svn-base  vascular.txt.svn-base
demo/openGLTest/: CMakeLists.txt  drawCube.cpp
demo/singletonDtkErrorManager/: CMakeLists.txt
doc/html/: annotated.html  classdtk_1_1dtk_array-members.html  classdtk_1_1dtk_array.html  classdtk_1_1dtk_array__coll__graph.map  classdtk_1_1dtk_array__coll__graph.md5  classdtk_1_1dtk_collision_detect_basic-members.html  classdtk_1_1dtk_collision_detect_basic.html  classdtk_1_1dtk_collision_detect_hierarchy-members.html  classdtk_1_1dtk_collision_detect_hierarchy.html  classdtk_1_1dtk_collision_detect_hierarchy__coll__graph.map  classdtk_1_1dtk_collision_detect_hierarchy__coll__graph.md5  classdtk_1_1dtk_collision_detect_hierarchy__inherit__graph.map  classdtk_1_1dtk_collision_detect_hierarchy__inherit__graph.md5  classdtk_1_1dtk_collision_detect_hierarchy_k_d_o_p_s-members.html  classdtk_1_1dtk_collision_detect_hierarchy_k_d_o_p_s.html  classdtk_1_1dtk_collision_detect_hierarchy_k_d_o_p_s__coll__graph.map  classdtk_1_1dtk_collision_detect_hierarchy_k_d_o_p_s__coll__graph.md5  classdtk_1_1dtk_collision_detect_hierarchy_k_d_o_p_s__inherit__graph.map  classdtk_1_1dtk_collision_detect_hierarchy_k_d_o_p_s__inherit__graph.md5  classdtk_1_1dtk_collision_detect_node-members.html  classdtk_1_1dtk_collision_detect_node.html  classdtk_1_1dtk_collision_detect_node__coll__graph.map  classdtk_1_1dtk_collision_detect_node__coll__graph.md5  classdtk_1_1dtk_collision_detect_node__inherit__graph.map  classdtk_1_1dtk_collision_detect_node__inherit__graph.md5  classdtk_1_1dtk_collision_detect_node_k_d_o_p_s-members.html  classdtk_1_1dtk_collision_detect_node_k_d_o_p_s.html  classdtk_1_1dtk_collision_detect_node_k_d_o_p_s__coll__graph.map  classdtk_1_1dtk_collision_detect_node_k_d_o_p_s__coll__graph.md5  classdtk_1_1dtk_collision_detect_node_k_d_o_p_s__inherit__graph.map  classdtk_1_1dtk_collision_detect_node_k_d_o_p_s__inherit__graph.md5  classdtk_1_1dtk_collision_detect_primitive-members.html  classdtk_1_1dtk_collision_detect_primitive.html  classdtk_1_1dtk_collision_detect_stage-members.html  classdtk_1_1dtk_collision_detect_stage.html  classdtk_1_1dtk_collision_detect_stage__coll__graph.map  classdtk_1_1dtk_collision_detect_stage__inherit__graph.md5  classdtk_1_1dtk_discrete_orientation_polytope-members.html  classdtk_1_1dtk_discrete_orientation_polytope.html  classdtk_1_1dtk_error_manager-members.html  (+723 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+93 more)
example/NewtonPendulum/: CMakeLists.txt  ball_object.cpp  ball_object.h  game.cpp  game.h  game_object.h  line.fs  program.cpp
example/cgalDraw/: main.cpp
example/eigentest/: CMakeLists.txt  main.cpp
example/openGLTest/: camera.h  drawTriangle.cpp  drawWindows.cpp  glad.c
example/singletonDtkErrorManager/: main.cpp
src/: CMakeLists.txt  dtk.cpp  dtk.h  dtk.vcproj  dtk.vcxproj  dtk.vcxproj.filters  dtkArray.h  dtkAssert.cpp  dtkAssert.h  dtkCollisionDetectBasic.cpp  dtkCollisionDetectBasic.h  dtkCollisionDetectHierarchy.cpp  dtkCollisionDetectHierarchy.h  dtkCollisionDetectHierarchyKDOPS.cpp  dtkCollisionDetectHierarchyKDOPS.h  dtkCollisionDetectNode.cpp  dtkCollisionDetectNode.h  dtkCollisionDetectNodeKDOPS.cpp  dtkCollisionDetectNodeKDOPS.h  dtkCollisionDetectPrimitive.cpp  dtkCollisionDetectPrimitive.h  dtkCollisionDetectStage.cpp  dtkCollisionDetectStage.h  dtkConfig.h  dtkError.h  dtkErrorManager.cpp  dtkErrorManager.h  dtkExports.h  dtkGraphics.h  dtkGraphicsKernel.cpp  dtkGraphicsKernel.h  dtkGraphicsKernel.h.bak  dtkGraphicsTools.h  dtkIDTypes.h  dtkIO.h  dtkImports.h  dtkInit.h  dtkIntersectTest.cpp  dtkIntersectTest.h  dtkJoint.cpp  (+61 more)
(+89 files in other folders)
